fix: z-index problem for mobile menu

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -62,6 +62,8 @@
     bottom: 0;
     flex-direction: column;
     justify-content: center;
+    z-index: 10;
+    background-color: #fff;
   }
 }
 
